Bug 168196 - Changing header properties only changes Master (odd page) until reload
Summary: Changing header properties only changes Master (odd page) until reload
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords:
: 49171 100290 115546 119010 129957 135928 144448 148987 167729 (view as bug list)
Depends on:
Blocks: Writer-Styles-Page-Odd-Even
  Show dependency treegraph
 
Reported: 2025-08-30 12:39 UTC by Justin L
Modified: 2025-09-11 14:51 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
headerProperties.odt: example file (11.01 KB, application/vnd.oasis.opendocument.text)
2025-08-30 12:39 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-08-30 12:39:58 UTC
Created attachment 202614 [details]
headerProperties.odt: example file

Changes to the header properties are only (visibly) made to the main header (Master) format - and not to the Left pages, or to the "First Header" page. The change only becomes fully realized after a save and reload. (Switching to web view and back is not enough, so it is not simply a layout or invalidation issue.)

Steps to reproduce:
1. Open headerProperties.odt: 5 pages with separate first, even, and odd headers
2. Click on the "first" header - Choose "Border and Background" from the context menu.
3. Change the background to some colour, gradient, or whatever

Expected: all page headers will get that background change
Actual: only the odd/right pages (3,5) are affected - not even page 1 which was the page we thought we were modifying.

4. Save and reload

Expected and Actual: all page headers now have that background change.

While headers can have different CONTENTS for first and left pages, there can only be one format (background, header text margins, spacing, height, etc.). Any of these other Format - Page Style - Header properties can be substituted for the background colour in the steps to reproduce.

Ultimately, there can be only one (shared) header property because styles.xml only defines it once as:
<style:page-layout style:name="Mpm1">
  <style:header-style>
    <style:header-footer-properties fo:background-color="gold" ... />
  </style:header-style>
</style:page-layout>
Comment 1 Justin L 2025-08-30 12:40:53 UTC
*** Bug 167729 has been marked as a duplicate of this bug. ***
Comment 2 Justin L 2025-08-30 12:54:02 UTC
*** Bug 129957 has been marked as a duplicate of this bug. ***
Comment 3 Justin L 2025-08-30 18:57:15 UTC
https://gerrit.libreoffice.org/c/core/+/190420 fixes this for the "Borders and Background" context menu, but likely not in the correct way...
Comment 4 Justin L 2025-09-01 21:21:06 UTC
*** Bug 119010 has been marked as a duplicate of this bug. ***
Comment 5 Justin L 2025-09-04 12:40:56 UTC
*** Bug 49171 has been marked as a duplicate of this bug. ***
Comment 6 Justin L 2025-09-08 19:55:18 UTC
*** Bug 100290 has been marked as a duplicate of this bug. ***
Comment 7 Justin L 2025-09-08 21:11:32 UTC
*** Bug 135928 has been marked as a duplicate of this bug. ***
Comment 8 Justin L 2025-09-08 21:28:34 UTC
*** Bug 148987 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2025-09-10 23:41:33 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d6bdb4e2aa08a829b0ecb5fbe990d0abdadfd75

tdf#168196 sw: copy header properties to all (first, even, odd)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Justin L 2025-09-10 23:44:35 UTC
*** Bug 144448 has been marked as a duplicate of this bug. ***
Comment 11 Justin L 2025-09-11 14:51:57 UTC
*** Bug 115546 has been marked as a duplicate of this bug. ***